--- a/.drone.yml
+++ b/.drone.yml
@@ -2,8 +2,8 @@ kind: pipeline
 name: default
 
 steps:
-- name: all
-  image: java
+- name: mvn install
+  image: maven:3-jdk-10
   commands:
-  - mvn clean
-  - mvn package -Dmaven.test.skip=true
+  - mvn install -DskipTests=true
+  - mvn package -DskipTests=true
